# auth_service

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/error/: handler.rs  mod.rs
backend/src/security/: handlers.rs  mod.rs  models.rs
backend/src/sql/: db.sql
backend/src/web/: filters.rs  handlers.rs  mod.rs  service.rs
common/: Cargo.toml
common/src/: lib.rs
