[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.21.2", features = ["full"] }
warp = "0.3.2"
serde = "1.0.145"
serde_json = "=1.0.87"
serde_derive = "1.0.145"
thiserror = "1.0.37"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
common = { version = "0.1.0", path = "../common" }
dotenv = "0.15.0"
anyhow = "1.0.65"
log = "0.4.17"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
scrypt = "0.10.0"
jsonwebtoken = "8.1.1"