[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }